--- a/cppzmq/PKGBUILD
+++ b/cppzmq/PKGBUILD
@@ -9,8 +9,8 @@ license=('LGPL')
 groups=()
 depends=('zeromq')
 makedepends=('git')
-provides=()
-conflicts=()
+provides=('cppzmq')
+conflicts=('cppzmq')
 replaces=()
 backup=()
 options=()
