xmlrpc-c project build script bug fix.

--- a/xmlrpc-c/PKGBUILD
+++ b/xmlrpc-c/PKGBUILD
@@ -40,7 +40,7 @@ build() {
 
   #./autogen.sh
   #patch -Np0 -i "${srcdir}/callInfo.patch"
-  ./configure
+  ./configure \
         --prefix=/usr \
         --disable-wininet-client \
         --enable-curl-client \
