--- a/obnam-bzr/PKGBUILD
+++ b/obnam-bzr/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="http://liw.fi/obnam/"
 license=('GPL3')
 groups=()
-depends=('python2' 'python2-cliapp' 'python2-tracing' 'python2-larch' 'python2-ttystatus' 'python-paramiko')
+depends=('python2' 'python2-cliapp' 'python2-tracing' 'python2-larch-bzr' 'python2-ttystatus-bzr' 'python-paramiko')
 makedepends=('bzr')
 provides=()
 conflicts=()
