--- a/yandex-contest/system/PKGBUILD
+++ b/yandex-contest/system/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
-pkgname=yandex.contest.common-git
+pkgname=yandex.contest.system-git
 pkgver=20120903
 pkgrel=1
-pkgdesc="Yandex.Contest common utilities"
+pkgdesc="Yandex.Contest system utilities"
 arch=('i686' 'x86_64')
-url="https://github.com/lex4051/yandex_contest_common"
+url="https://github.com/lex4051/yandex_contest_system"
 license=('GPL')
 groups=()
-depends=('boost-libs')
-makedepends=('git' 'cmake' 'boost')
+depends=('boost-libs' 'lxc' 'pkgconfig' 'yandex.contest.common-git')
+makedepends=('git' 'boost')
 provides=()
 conflicts=()
 replaces=()
@@ -19,8 +19,8 @@ source=()
 noextract=()
 md5sums=()
 
-_gitroot="git://github.com/lex4051/yandex_contest_common.git"
-_gitname="common"
+_gitroot="git://github.com/lex4051/yandex_contest_system.git"
+_gitname="system"
 
 build() {
   cd "$srcdir"
