yandex.contest.invoker-git: lxc.conf bug fix.

--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -10,7 +10,8 @@
             [
                 "/bin /bin none ro,bind 0 0",
                 "/usr /usr none ro,bind 0 0",
-                "/opt /opt none ro,bind 0 0"
+                "/opt /opt none ro,bind 0 0",
+                "none /cgroup cgroup defaults 0 0"
             ]
         },
         "cgroup":
