bunsan.{common,utility,pm} PKGBUILD fixes.

--- a/bunsan/common/PKGBUILD
+++ b/bunsan/common/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname=('bunsan.common-git' 'python-bunsan.common-git')
-pkgver=20120506
+pkgver=20120613
 pkgrel=1
 arch=('i686' 'x86_64')
-url=""
+url="https://github.com/sarum9in/bunsan_common"
 license=('GPL')
 groups=()
 makedepends=('git' 'python')
@@ -17,8 +17,8 @@ source=()
 noextract=()
 md5sums=()
 
-_gitroot="git://cs.istu.ru/bunsan_common.git"
-#_gitroot="/home/lex/istu/dev/bunsan/common/.git"
+#_gitroot="git://cs.istu.ru/bunsan_common.git"
+_gitroot="git://github.com/sarum9in/bunsan_common.git"
 _gitname="common"
 
 build() {
