--- a/bunsan/lua/PKGBUILD
+++ b/bunsan/lua/PKGBUILD
@@ -8,7 +8,7 @@ url=""
 license=('GPL')
 groups=()
 depends=('boost-libs' 'lua')
-makedepends=('git')
+makedepends=('git' 'cmake')
 provides=()
 conflicts=()
 replaces=()
@@ -54,4 +54,4 @@ check() {
 package() {
   cd "$srcdir/$_gitname-build/build"
   make DESTDIR="$pkgdir/" install
-} 
+}
