yandex.contest.invoker-git: lxc.conf default environment bug fix.
HOME was defined for python.

--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -57,7 +57,8 @@
             {
                 "PATH": "/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/sbin",
                 "LC_ALL": "C",
-                "LANG": "C"
+                "LANG": "C",
+                "HOME": "/"
             },
             "currentPath": "/",
             "ownerId":
