yandex.contest.invoker-git: lxc.conf fix.
Process::ResourceLimits: timeLimitMillis -> userTimeLimitMillis.

--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -48,7 +48,7 @@
         {
             "resourceLimits":
             {
-                "timeLimitMillis": 2000,
+                "userTimeLimitMillis": 2000,
                 "memoryLimitBytes": 67108864,
                 "outputLimitBytes": 8388608,
                 "numberOfProcesses": 32
