Package name fix: zeromq -> zeromq-beta.

--- a/bunsan/common/PKGBUILD
+++ b/bunsan/common/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_common"
 license=('GPL')
 groups=()
-depends=('xmlrpc-c-svn' 'boost-libs' 'zeromq' 'cppzmq-git' 'boost.process-svn')
+depends=('xmlrpc-c-svn' 'boost-libs' 'zeromq-beta' 'cppzmq-git' 'boost.process-svn')
 makedepends=('git' 'cmake')
 provides=()
 conflicts=()
