--- a/cppzmq/PKGBUILD
+++ b/cppzmq/PKGBUILD
@@ -7,7 +7,7 @@ arch=(any)
 url="https://github.com/zeromq/cppzmq"
 license=('LGPL')
 groups=()
-depends=('zeromq')
+depends=('zeromq-beta')
 makedepends=('git')
 provides=('cppzmq')
 conflicts=('cppzmq')
