bunsan.worker-git PKGBUILD _gitroot fix.

--- a/bunsan/worker/PKGBUILD
+++ b/bunsan/worker/PKGBUILD
@@ -19,8 +19,8 @@ source=()
 noextract=()
 md5sums=()
 
-_gitroot="git://cs.istu.ru/bunsan_worker.git"
-#_gitroot="git://github.com/sarum9in/bunsan_worker.git"
+#_gitroot="git://cs.istu.ru/bunsan_worker.git"
+_gitroot="git://github.com/sarum9in/bunsan_worker.git"
 _gitname="worker"
 
 build() {
