--- a/obnam-bzr/PKGBUILD
+++ b/obnam-bzr/PKGBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname=obnam-bzr
-pkgver=1330
+pkgver=1347
 pkgrel=1
 pkgdesc="Obnam is an easy, secure backup program."
 arch=('i686' 'x86_64')
 url="http://liw.fi/obnam/"
 license=('GPL3')
 groups=()
-depends=('python2' 'python2-cliapp' 'python2-tracing' 'python2-larch-bzr' 'python2-ttystatus-bzr' 'python2-paramiko')
+depends=('python2' 'python2-cliapp-bzr' 'python2-tracing' 'python2-larch-bzr' 'python2-ttystatus-bzr' 'python2-paramiko')
 makedepends=('bzr')
 provides=('obnam')
 conflicts=('obnam')
