--- a/bunsan/dcs/PKGBUILD
+++ b/bunsan/dcs/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url=""
 license=('GPL')
 groups=()
-depends=('bunsan.common-git')
+depends=('bunsan.common-git' 'bunsan.network-git')
 makedepends=('git' 'cmake')
 provides=()
 conflicts=()
