--- a/bunsan/worker/PKGBUILD
+++ b/bunsan/worker/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url=""
 license=('GPL')
 groups=()
-depends=('python' 'bunsan.common-git' 'bunsan.pm-git' 'bunsan.dcs-git')
+depends=('python' 'bunsan.common-git' 'bunsan.network-git' 'bunsan.pm-git' 'bunsan.dcs-git')
 makedepends=('git')
 provides=()
 conflicts=()
