bunsan.network-git package dependencies bug fix.

--- a/bunsan/network/PKGBUILD
+++ b/bunsan/network/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_network"
 license=('GPL')
 groups=()
-depends=('bunsan.common-git' 'boost-libs' 'zeromq-beta' 'cppzmq-git')
+depends=('bunsan.common-git' 'boost-libs' 'zeromq-beta' 'cppzmq-git' 'xmlrpc-c-svn')
 makedepends=('git' 'cmake')
 provides=()
 conflicts=()
