--- a/bunsan/utility/PKGBUILD
+++ b/bunsan/utility/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_utility"
 license=('GPL')
 groups=()
-depends=('bunsan.common-git' 'boost-libs')
+depends=('bunsan.common-git' 'bunsan.process-git' 'boost-libs')
 makedepends=('git' 'cmake')
 provides=()
 conflicts=()
