--- a/bunsan/compatibility/PKGBUILD
+++ b/bunsan/compatibility/PKGBUILD
@@ -40,12 +40,9 @@ build() {
   git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
   cd "$srcdir/$_gitname-build"
 
-  #
-  # BUILD HERE
-  #
   mkdir build && cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr
-  make
+  make $MAKEFLAGS
 }
 
 #check() {
