--- a/yandex-contest/common/PKGBUILD
+++ b/yandex-contest/common/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/yandex_contest_common"
 license=('GPL')
 groups=()
-depends=('boost-libs')
+depends=('boost-libs' 'bunsan.common-git')
 makedepends=('git' 'cmake' 'boost')
 provides=()
 conflicts=()
@@ -42,7 +42,7 @@ build() {
 
   mkdir build && cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
-  make
+  make $MAKEFLAGS
 }
 
 check() {
