--- a/bunsan/bacs/problem/PKGBUILD
+++ b/bunsan/bacs/problem/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_bacs_problem"
 license=('GPL')
 groups=()
-depends=('bunsan.common-git' 'bunsan.bacs.single.problem-git')
+depends=('bunsan.pm-git' 'bunsan.bacs.single.problem-git')
 makedepends=('git' 'cmake')
 provides=()
 conflicts=()
