--- a/bunsan/lua/PKGBUILD
+++ b/bunsan/lua/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname=bunsan.lua-git
-pkgver=20120129
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan lua wrapper library"
 arch=('i686' 'x86_64')
@@ -22,6 +22,11 @@ md5sums=()
 _gitroot="git://cs.istu.ru/bunsan_lua.git"
 #_gitroot="git://github.com/sarum9in/bunsan_lua.git"
 _gitname="lua"
+
+pkgver() {
+  cd $_gitname
+  echo $(git rev-list --count master).$(git rev-parse --short master)
+}
 
 build() {
   cd "$srcdir"
