--- a/bunsan/pm_python/PKGBUILD
+++ b/bunsan/pm_python/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname='python-bunsan.pm-git'
-pkgver=20121106
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan pm python wrapper"
 arch=('i686' 'x86_64')
@@ -21,6 +21,11 @@ md5sums=()
 
 _gitroot="git://github.com/sarum9in/bunsan_pm_python.git"
 _gitname="pm_python"
+
+pkgver() {
+  cd $_gitname
+  echo $(git rev-list --count master).$(git rev-parse --short master)
+}
 
 build() {
   cd "$srcdir"
