--- a/bunsan/bacs/single/api/PKGBUILD
+++ b/bunsan/bacs/single/api/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname='bunsan.bacs.single.api-git'
-pkgver=20120915
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="bacs.single api library"
 arch=('i686' 'x86_64')
@@ -22,6 +22,11 @@ md5sums=()
 #_gitroot="git://cs.istu.ru/bunsan_bacs_single_api.git"
 _gitroot="git://github.com/sarum9in/bunsan_bacs_single_api.git"
 _gitname="api"
+
+pkgver() {
+  cd $_gitname
+  echo $(git rev-list --count master).$(git rev-parse --short master)
+}
 
 build() {
   cd "$srcdir"
