--- a/bunsan/compatibility/PKGBUILD
+++ b/bunsan/compatibility/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname=bunsan.compatibility-git
-pkgver=20110803
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan project compatibility library"
 arch=('i686' 'x86_64')
@@ -21,6 +21,11 @@ md5sums=()
 
 _gitroot="/home/lex/istu/dev/bunsan/compatibility/.git"
 _gitname="compatibility"
+
+pkgver() {
+  cd $_gitname
+  echo $(git rev-list --count master).$(git rev-parse --short master)
+}
 
 build() {
   cd "$srcdir"
