--- a/yandex-contest/common/PKGBUILD
+++ b/yandex-contest/common/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname=yandex.contest.common-git
-pkgver=20120912
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="Yandex.Contest common utilities"
 arch=('i686' 'x86_64')
@@ -21,6 +21,11 @@ md5sums=()
 
 _gitroot="git://github.com/sarum9in/yandex_contest_common.git"
 _gitname="common"
+
+pkgver() {
+  cd $_gitname
+  echo $(git rev-list --count master).$(git rev-parse --short master)
+}
 
 build() {
   cd "$srcdir"
