--- a/yandex-contest/invoker-compat-common/PKGBUILD
+++ b/yandex-contest/invoker-compat-common/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname=yandex.contest.invoker.compat.common-git
-pkgver=20120910
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="Yandex.Contest.Compat common utilities"
 arch=('i686' 'x86_64')
@@ -21,6 +21,11 @@ md5sums=()
 
 _gitroot="git://github.com/sarum9in/yandex_contest_invoker_compat_common.git"
 _gitname="invoker_compat_common"
+
+pkgver() {
+  cd $_gitname
+  echo $(git rev-list --count master).$(git rev-parse --short master)
+}
 
 build() {
   cd "$srcdir"
