--- a/yandex-contest/invoker/PKGBUILD
+++ b/yandex-contest/invoker/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname=yandex.contest.invoker-git
-pkgver=20120924
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="Yandex.Contest.Invoker"
 arch=('i686' 'x86_64')
@@ -22,6 +22,11 @@ md5sums=('5c9256ac9a3e8cfcd849bad73997c8d7'
 
 _gitroot="git://github.com/sarum9in/yandex_contest_invoker.git"
 _gitname="invoker"
+
+pkgver() {
+  cd $_gitname
+  echo $(git rev-list --count master).$(git rev-parse --short master)
+}
 
 build() {
   cd "$srcdir"
