yandex.contest.system dependency fix: lxc -> lxc0.8.

--- a/yandex-contest/system/PKGBUILD
+++ b/yandex-contest/system/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/yandex_contest_system"
 license=('GPL')
 groups=()
-depends=('boost-libs' 'lxc' 'pkgconfig' 'yandex.contest.common-git')
+depends=('boost-libs' 'lxc0.8' 'pkgconfig' 'yandex.contest.common-git')
 makedepends=('git' 'boost')
 provides=()
 conflicts=()
