--- a/bunsan/compatibility/PKGBUILD
+++ b/bunsan/compatibility/PKGBUILD
@@ -15,47 +15,28 @@ replaces=()
 backup=()
 options=()
 install=
-source=()
+source=("$pkgname::/home/lex/istu/dev/bunsan/compatibility/.git")
 noextract=()
-md5sums=()
-
-_gitroot="/home/lex/istu/dev/bunsan/compatibility/.git"
-_gitname="compatibility"
+md5sums=('SKIP')
 
 pkgver() {
-  cd $_gitname
+  cd "$srcdir/$pkgname"
   echo $(git rev-list --count master).$(git rev-parse --short master)
 }
 
 build() {
-  cd "$srcdir"
-  msg "Connecting to GIT server...."
-
-  if [ -d $_gitname ] ; then
-    cd $_gitname && git pull origin
-    msg "The local files are updated."
-  else
-    git clone $_gitroot $_gitname
-  fi
-
-  msg "GIT checkout done or server timeout"
-  msg "Starting make..."
-
-  rm -rf "$srcdir/$_gitname-build"
-  git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
-  cd "$srcdir/$_gitname-build"
-
+  cd "$srcdir/$pkgname"
   mkdir build && cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr
   make $MAKEFLAGS
 }
 
 #check() {
-#  cd "$srcdir/$_gitname-build/build"
+#  cd "$srcdir/$pkgname/build"
 #  make test
 #}
 
 package() {
-  cd "$srcdir/$_gitname-build/build"
+  cd "$srcdir/$pkgname/build"
   make DESTDIR="$pkgdir/" install
 }
