--- a/yandex-contest/invoker/PKGBUILD
+++ b/yandex-contest/invoker/PKGBUILD
@@ -15,49 +15,33 @@ replaces=()
 backup=()
 options=()
 install=
-source=('lxc.conf' 'yandex-contest-invoker.sh')
+source=("$pkgname::git://github.com/sarum9in/yandex_contest_invoker.git"
+        'lxc.conf'
+        'yandex-contest-invoker.sh')
 noextract=()
-md5sums=('5c9256ac9a3e8cfcd849bad73997c8d7'
+md5sums=('SKIP'
+         '5c9256ac9a3e8cfcd849bad73997c8d7'
          '035bc83489dbed92e8bed93b2915c002')
 
-_gitroot="git://github.com/sarum9in/yandex_contest_invoker.git"
-_gitname="invoker"
-
 pkgver() {
-  cd $_gitname
+  cd "$srcdir/$pkgname"
   echo $(git rev-list --count master).$(git rev-parse --short master)
 }
 
 build() {
-  cd "$srcdir"
-  msg "Connecting to GIT server...."
-
-  if [ -d $_gitname ] ; then
-    cd $_gitname && git pull origin
-    msg "The local files are updated."
-  else
-    git clone $_gitroot $_gitname
-  fi
-
-  msg "GIT checkout done or server timeout"
-  msg "Starting make..."
-
-  rm -rf "$srcdir/$_gitname-build"
-  git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
-  cd "$srcdir/$_gitname-build"
-
+  cd "$srcdir/$pkgname"
   mkdir build && cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
   make $MAKEFLAGS
 }
 
 check() {
-  cd "$srcdir/$_gitname-build/build"
+  cd "$srcdir/$pkgname/build"
   #make test
 }
 
 package() {
-  cd "$srcdir/$_gitname-build/build"
+  cd "$srcdir/$pkgname/build"
   make DESTDIR="$pkgdir/" install
   install -m 644 -D "$srcdir/lxc.conf" "$pkgdir/etc/yandex/contest/invoker/lxc.conf"
   sed -r "s|__ARCH__|$CARCH|" -i "$pkgdir/etc/yandex/contest/invoker/lxc.conf"
