--- a/boost.process-svn/PKGBUILD
+++ b/boost.process-svn/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Filippov Aleksey <sarum9in@gmail.com>
 pkgname=boost.process-svn
-pkgver=61903
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="Unofficial boost process library"
 arch=('any')
@@ -15,40 +15,28 @@ replaces=()
 backup=()
 options=()
 install=
-source=('filesystem.patch' 'boost_system_system_category.patch' 'mingw32.patch')
+source=("$pkgname::svn+http://svn.boost.org/svn/boost/sandbox/process/boost/"
+        'filesystem.patch' 'boost_system_system_category.patch' 'mingw32.patch')
 noextract=()
-md5sums=('8e56dc15541a0160408b6fda1d5cc2eb'
+md5sums=('SKIP'
+         '8e56dc15541a0160408b6fda1d5cc2eb'
          'a8746c197dc4b34057e6d58a2085c79f'
          'a16ab29dc440f261f613ec3b0d43c7c0')
 
-_svntrunk="http://svn.boost.org/svn/boost/sandbox/process/boost/"
-_svnmod="boost.process"
+pkgver() {
+  cd "$SRCDEST/$pkgname"
+  svnversion | tr -d [A-z]
+}
 
 build() {
-  cd "$srcdir"
-  msg "Connecting to SVN server...."
-
-  if [[ -d "$_svnmod/.svn" ]]; then
-    (cd "$_svnmod" && svn up -r "$pkgver")
-  else
-    svn co "$_svntrunk" --config-dir ./ -r "$pkgver" "$_svnmod"
-  fi
-
-  msg "SVN checkout done or server timeout"
-  msg "Starting build..."
-
-  rm -rf "$srcdir/$_svnmod-build"
-  cp -r "$srcdir/$_svnmod" "$srcdir/$_svnmod-build"
-  cd "$srcdir/$_svnmod-build"
-
-  cd "$srcdir/$_svnmod-build"
+  cd "$srcdir/$pkgname"
   patch -Np1 -i "../filesystem.patch"
   patch -Np1 -i "../boost_system_system_category.patch"
   patch -Np1 -i "../mingw32.patch"
 }
 
 package() {
-  cd "$srcdir/$_svnmod-build"
+  cd "$srcdir/$pkgname"
   dest="$pkgdir/usr/include/boost"
   install -d "$dest"
   tar cf - --exclude-vcs . | (cd "$dest" && tar xf -)
