--- a/yandex-contest/invoker/PKGBUILD
+++ b/yandex-contest/invoker/PKGBUILD
@@ -25,7 +25,7 @@ md5sums=('SKIP'
 
 pkgver() {
   cd "$srcdir/$pkgname"
-  echo $(git rev-list --count master).$(git rev-parse --short master)
+  echo $(git rev-list --count HEAD).$(git rev-parse --short HEAD)
 }
 
 build() {
