bunsan.bacs.single.problem-git: excess 'yandex.contest.common-git' dependency was removed.

--- a/bunsan/bacs/single/problem/PKGBUILD
+++ b/bunsan/bacs/single/problem/PKGBUILD
@@ -7,7 +7,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/sarum9in/bunsan_bacs_single_problem"
 license=('GPL')
 groups=()
-depends=('bunsan.common-git' 'bunsan.pm-git' 'yandex.contest.common-git' 'bunsan.bacs.single.api-git')
+depends=('bunsan.common-git' 'bunsan.pm-git' 'bunsan.bacs.single.api-git')
 makedepends=('git' 'cmake')
 provides=()
 conflicts=()
